app/styles/applicants.module.css
.container {
    background-color: var(--bg_darker);
    display: flex;
    flex-direction: column;
    justify-content: center;
    min-height: 720px;
    margin: 56px auto;
    width: 80%;
    border-radius: 8px;
    padding: 20px;
    /* box-shadow: 6px 6px 10px -1px rgba(0, 0, 0, 0.15),
                -6px -6px 10 -1px rgba(255, 255, 255, 0.7) */
}

.course {
    display: flex;
    flex-direction: column;
}

.categories {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #b7b7b7;
    height: 30px;
    border-radius: 8px;
    margin-bottom: 0px;
    font-size: 17px;
    padding-left: 1.9%;
    padding-right: 0.8%;
}

.categories h4 {
    width: 100%;
    display: flex;
    flex-direction: column;
    margin-left:15px;
    align-items: start;
    border: solid;
}

.accordion {
    background-color: white;
    margin-top: 0px;
    border-radius: 8px;
    padding: 0;
    margin-bottom: 5px;
}
.accordion li {
    list-style: none;
    padding: 10px;
}
.accordion li label {
    width: 100%;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    font-size: 16px;
    cursor: pointer;
}

.accordion li label p {
    width: 100%;
    display: flex;
    flex-direction: row;
    margin-left: 20px;
    align-items: start;
    border: solid;
}

/*Ignore this - i was experimenting */
/* .accordion li label .labels {
    display: flex;
    flex-direction: row;
    width: 100%;
    margin-left: 20px;
    align-items: start;
} */


/* Put some text b4 the label text */
.accordion li label::before {
    content: '+'; 
    font-size: 24px;
    font-weight: 600;
}

/* Collapsing Accordion Card */
.accordion .content {
    padding: 0 10px;
    line-height: 26px;

    max-height: 0;
    overflow: hidden;
    transition: ease-out 0.35s;
    padding: 0 30px;
}

/* Expanding Accordion Card */
.accordion input[type='checkbox']:checked + label + .content {
    max-height: 400px;
    transition: linear 0.35s;
    padding: 0 30px;
}

.accordion input[type='checkbox'] {
    display: none;
}
.accordion input[type='checkbox']:checked + label::before {
    content: '-';
    font-size: 30px;
}

.buttons {
    display: flex;
    flex-direction: row;
    border-radius: 12px;
    padding: 6px 20px;
    font-size: 16px;
    font-weight: bold;
    border: none;
    margin-right: 7px;
    cursor: pointer;
}

.resume_container {
    display: flex;
    flex-direction: row;
    align-items: center;
    margin: 0px;
}
.resume {
    margin: 0 10px;
}
.skills {
    margin-bottom: 5px;
}



.green {
    background-color: #85E538;
}
.red {
    background-color: #FA6666;
}
.underline {
    text-decoration: underline;
}
.bold {
    font-weight: bold;
}
.top_padding {
    margin-top: 50px;
}

